# roll

./: Cargo.toml  README.md
src/: cli.rs  dice.rs  main.rs
