[package]
name = "roll"
version = "0.1.1"
edition = "2021"
description = "This command exists to help roll dices in D&D games.\nThe following are implemented: d4, d6, d8, d10, d20."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"