[package]
name = "rolls"
version = "0.1.2"
edition = "2021"
description = "This command exists to help roll dices in D&D games.\nThe following are implemented: d4, d6, d8, d10, d20."
authors = ["Julio Gardona <jcbritobr@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jgardona/rolls"
license = "MIT"
keywords = ["random", "dices", "game", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"